<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_selftest"
        android:title="@string/menu_selftest"
        android:icon="@drawable/ic_baseline_bug_report_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_fwtest"
        android:title="@string/menu_fwtest"
        android:icon="@drawable/ic_baseline_science_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_log"
        android:title="@string/menu_clear_log"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_settings"
        android:title="@string/menu_export_settings"
        android:icon="@drawable/ic_baseline_download_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import_settings"
        android:title="@string/menu_import_settings"
        android:icon="@drawable/ic_baseline_upload_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_baseline_info_24"
        app:showAsAction="never" />

</menu>