<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_medium">

    <TextView
        android:id="@+id/sectionVoiceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_header_margin_top"
        android:layout_marginBottom="@dimen/section_header_margin_bottom"
        android:text="@string/section_voice"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="?attr/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/languageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_language"
        app:startIconDrawable="@drawable/ic_baseline_language_24">

        <AutoCompleteTextView
            android:id="@+id/languageSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:contentDescription="@string/desc_language_spinner" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/voiceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/label_voice"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <AutoCompleteTextView
            android:id="@+id/voiceSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:contentDescription="@string/desc_voice_spinner" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/speedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/label_speed"
        app:startIconDrawable="@drawable/ic_baseline_speed_24"
        app:helperText="@string/speed_hint"
        app:helperTextEnabled="true">

        <com.google.android.material.slider.Slider
            android:id="@+id/speedSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="250"
            android:stepSize="1"
            android:contentDescription="@string/desc_speed" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/speedValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="end"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="?attr/colorOnSurfaceVariant" />

</LinearLayout>