<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_medium">

    <TextView
        android:id="@+id/sectionMyWordsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_header_margin_top"
        android:layout_marginBottom="@dimen/section_header_margin_bottom"
        android:text="@string/section_my_words"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/rules_help"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchApplyRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/checkbox_apply_rules" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rulePatternLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rule_pattern"
        app:startIconDrawable="@drawable/ic_baseline_find_in_page_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rulePatternInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ruleSayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/hint_rule_say"
        app:startIconDrawable="@drawable/ic_baseline_record_voice_over_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ruleSayInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkWholeWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkbox_whole_word"
            android:checked="true" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkMatchCase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkbox_match_case" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkRegex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkbox_regex" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/btn_add_rule"
        app:icon="@drawable/ic_baseline_add_24"
        style="@style/Widget.Material3.Button.FilledTonal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="Rules"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:textColor="?attr/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rulesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_height"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/spacing_medium"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>