<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_medium">

    <TextView
        android:id="@+id/sectionAudioHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/section_header_margin_top"
        android:layout_marginBottom="@dimen/section_header_margin_bottom"
        android:text="@string/section_audio"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="?attr/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_sample_rate"
        app:startIconDrawable="@drawable/ic_baseline_graphic_eq_24">

        <AutoCompleteTextView
            android:id="@+id/rateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:clickable="true"
            android:contentDescription="@string/desc_rate_spinner" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>